docs: publish active project and security guidance